sre/DocumentKeeper/k8scharts/templatesWithValues/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: documentkeeper
  labels:
    app: documentkeeper
spec:
  replicas: 1
  selector:
    matchLabels:
      app: documentkeeper
  template:
    metadata:
      labels:
        app: documentkeeper
    spec:
      containers:
      - name: document-keeper
        image: gcr.io/documentkeeper-04/images/document-keeper:latest
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 4096
          protocol: TCP
        resources:
          limits:
            memory: 1Gi
          requests:
            cpu: 250m
            memory: 512Mi
        livenessProbe:
          httpGet:
            path: /-/health
            port: http
          initialDelaySeconds: 30
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /-/ready
            port: http
          initialDelaySeconds: 30
          periodSeconds: 10
