sre/DocumentKeeper/k8scharts/templatesWithValues/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: documentkeeper
  labels:
    app: documentkeeper
spec:
  type: LoadBalancer
  ports:
  - port: 4096
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: documentkeeper
