sre/DocumentKeeper/k8scharts/templatesWithValues/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: documentkeeper
  labels:
    app: documentkeeper
spec:
  ingressClassName:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: documentkeeper
            port:
              number: 4096
